--- a/frontend/kiki/word_style.css
+++ b/frontend/kiki/word_style.css
@@ -102,7 +102,7 @@ body {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  gap: 1.5vw;
+  gap: 1.2vw;
 }
 .chat-box::-webkit-scrollbar {
   width: 8px;
@@ -115,7 +115,9 @@ body {
 
 .chat-message {
   max-width: 75%;
+  padding: 8px;
   border-radius: 10px;
+  overflow-wrap: break-word;
 }
 
 .chat-message.bot {
@@ -123,9 +125,10 @@ body {
   /* font-family: "NanumSquareLight", sans-serif; */
   background-color: #bee7ff;
   border: none;
+  border-radius: 10px;
   font-size: 1.3em;
-  padding: 1em 3em;
-  white-space: pre-wrap;
+  padding: 1em 2em;
+  word-break: nowrap; /* 긴 텍스트도 줄바꿈 처리 */
 }
 
 .chat-message.user {
@@ -133,11 +136,11 @@ body {
   /* font-family: "NanumSquareLight", sans-serif; */
   background-color: #f2faff;
   border: none;
+  border-radius: 10px;
   font-size: 1.3em;
-  padding: 1vw 3vh;
-  text-align: center;
+  padding: 1em 2em;
+  word-break: nowrap; /* 긴 텍스트도 줄바꿈 처리 */
 }
-
 .chat-message.selected {
   border: none; /* 선택된 메시지에 테두리 추가 */
   background-color: #d3ffd3; /* 선택된 메시지 색상 변경 */
@@ -156,9 +159,10 @@ body {
   width: 78.3%;
 }
 .input-container {
-  flex-direction: column; /* 세로 정렬 */
-  top: 72.4%;
-  height: 13.5%;
+  top: 81%;
+  height: 5%;
+  flex-direction: row;
+  gap: 1vw; /* 요소 간 간격 */
 }
 /* 자동 응답  */
 .quick-reply-buttons {
@@ -223,8 +227,8 @@ body {
   height: 6vh; /* 버튼의 세로 크기 */
   right: 18.6%;
 }
-/* 압정 과거 대화 이력 목록 모달, 목록 창: 화면 왼쪽에서 열림----------------------------------------------------------------------------------------------------*/
 
+/* 압정 과거 대화 이력 목록 모달, 목록 창: 화면 왼쪽에서 열림----------------------------------------------------------------------------------------------------*/
 .historymodal {
   display: none;
   position: fixed;
